--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -140,5 +140,6 @@
   "Remove": "Remover",
   "Email": "E-mail",
   "Save Permission": "Salvar permissões",
-    "Save Role": "Salvar papéis"
+    "Save Role": "Salvar papéis",
+    "Access": "Acessos"
 }
