--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -141,5 +141,6 @@
   "Email": "E-mail",
   "Save Permission": "Salvar permissões",
     "Save Role": "Salvar papéis",
-    "Access": "Acessos"
+    "Access": "Acessos",
+    "Not found record": "Nenhum registro encontrado"
 }
