bloqueio de usuario adicionado

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -142,5 +142,6 @@
   "Save Permission": "Salvar permissões",
     "Save Role": "Salvar papéis",
     "Access": "Acessos",
-    "Not found record": "Nenhum registro encontrado"
+    "Not found record": "Nenhum registro encontrado",
+    "Blocked": "Bloqueado"
 }
